# Googlellama

./: .env  .gitignore  README.md  pyproject.toml
Googlellama/: __init__.py  __main__.py  install.py  resources.py  tools.py
akinus_utils/: README.md  __init__.py
akinus_utils/ai/: ollama.py
akinus_utils/transform/academic/: references.py
akinus_utils/transform/case/: camel.py  lower.py  sentence.py  title.py  upper.py
akinus_utils/transform/case/snake/: screaming.py  snake.py  upper_snake.py
akinus_utils/transform/obfuscation/: decode.py  encode.py
akinus_utils/utils/: __init__.py  app_details.py  bootstrap.py  logger.py  notify.py  update.py  uv.py
akinus_utils/web/: __init__.py
akinus_utils/web/google/: auth.py
akinus_utils/web/search/: __init__.py  arxiv.py  brave.py  core.py  crossref.py  duckduckgo.py  openalex.py
akinus_utils/web/server/: mcp.py
akinus_utils/web/utils/: __init__.py  retry.py  scrape.py
data/: readme.txt
