[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Googlellama"
version = "0.1.0"
authors = [
    {name = "Akinus21"}
]
description = "A Hello World CLI using uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "toml",
    "packaging",
    "win10toast; sys_platform == 'win32'",
]

[project.scripts]
Googlellama = "Googlellama.__main__:main"
Googlellama_update = "Googlellama.akinus_utils.update:main"

# Use setuptools package discovery here:
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
